2003-11-24  Andy Piper <andyp@users.sf.net>

	* docs are conventionally installed to /usr/share/doc and not to
	  /usr/doc so we'll fix configure.in and Makefile.am to do that. This
	  means that a 'make uninstall' won't kill the /usr/doc directory
	  (which probably only contains a gnomesword2 directory as /usr/doc
	  is not usually present on e.g. RedHat/Fedora systems, probably
          others) so it will need to be removed manually to avoid cruftage.


2003-11-23  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev14
	* changed 4 clists to listviews in gnome2/search_dialog.c
	* worked on bug 842524 - needs testing
	* added a button to toggle between text and parallel view.
	* added a button to toggle between book and dict/lex view.


2003-11-20  Terry <tbiggs@users.sf.net>

	* fixed bug 845752
	* ui clean up
		* moved parallel view to bibletexts pane
		* removed File->Open Dialogs form main menu
		  (dialogs may be opened by right clicking in module
		  list and chosing <Open in dialog>
		* Removed Help->About Modules from main menus
		  (about dialogs may be opened by right clicking in module
		  list and chosing <About>


2003-11-19  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev13
	* worked on bugs 842319, 842668 and 842688

2003-11-18  Andy Piper <andyp@users.sf.net>

	* removed redundant icon
	* tweaked gnomesword2.desktop.in again, more HIG-compliant
	* updated src/gnome2/about_sword.c to fix typo, prettify, remove deprecated 
	  calls

2003-11-18  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev12
	* changed configure.in so gnome2 build is the default
	* added Andy's changes to gnomesword2.desktop.in
	* fixed bugs 842314, 842319, 842324, 842677 and 842688	


2003-11-13  Terry <tbiggs@users.sf.net>

	* bumped to 0.9.dev11
	* removed shortcut bar from preferences dialog - gnome2
	* removed shortcut bar page from preferences dialog - gnome2
	* fixed text pane max width bug 
	* fixed save search results list to bookmarks for sidebar search - gnome2	

